ProtocolLib API 연동, 게임 시작 NPC 추가 밑 게임 시작 메뉴 추가